#
# GYP version: xwalk_application.gypi:generate_xwalk_application_resources
import("//tools/grit/grit_rule.gni")
import("//tools/grit/repack.gni")
grit("generate_xwalk_application_resources") {
  source = "application_resources.grd"
  resource_ids = "//xwalk/resources/resource_ids"
  outputs = [
    "$root_gen_dir/xwalk/application/grit/xwalk_application_resources.h",
    "$root_gen_dir/xwalk/application/xwalk_application_resources.pak",
    "$root_gen_dir/xwalk/application/xwalk_application_resources.rc",
  ]
}

copy("xwalk_application_resources") {
  public_deps = [":generate_xwalk_application_resources_grit"]

  sources = ["$root_gen_dir/xwalk/application/xwalk_application_resources.pak"]
  outputs = ["$root_out_dir/{{source_file_part}}"]
}

static_library("xwalk_application_lib") {

  sources = [
    "browser/application.cc",
    "browser/application.h",
    "browser/application_protocols.cc",
    "browser/application_protocols.h",
    "browser/application_security_policy.cc",
    "browser/application_security_policy.h",
    "browser/application_service.cc",
    "browser/application_service.h",
    "browser/application_system.cc",
    "browser/application_system.h",

    "extension/application_runtime_extension.cc",
    "extension/application_runtime_extension.h",
    "extension/application_widget_extension.cc",
    "extension/application_widget_extension.h",
    "extension/application_widget_storage.cc",
    "extension/application_widget_storage.h",

    "renderer/application_native_module.cc",
    "renderer/application_native_module.h",
  ]

  defines = [
    "GN_BUILDING",
  ]

  include_dirs = [
    "..",
    "../..",
  ]

  deps = [
    "//base:base",
    "//crypto:crypto",
    "//ipc:ipc",
    "//ui/base",
    "//url:url",
    "//third_party/WebKit/public:blink",
    "//third_party/zlib:zip",
    ":xwalk_application_resources",
    "common:xwalk_application_common_lib",
    "//third_party/libxml",
  ]
}
