static_library("experimental") {
  deps = [
    ":generate_jsapi_file_system",
    "//xwalk/resources:generate_xwalk_resources_grit",
  ]

  sources = [
    "native_file_system/native_file_system.idl",
    "native_file_system/native_file_system_extension.cc",
    "native_file_system/native_file_system_extension.h",
    "native_file_system/virtual_root_provider.cc",
    "native_file_system/virtual_root_provider.h",
    "native_file_system/virtual_root_provider_android.cc",
    "native_file_system/virtual_root_provider_linux.cc",
    "native_file_system/virtual_root_provider_mac.cc",
    "native_file_system/virtual_root_provider_win.cc",

    "$root_gen_dir/xwalk/experimental/native_file_system/native_file_system.cc",
    "$root_gen_dir/xwalk/experimental/native_file_system/native_file_system.h",
]

  include_dirs = [
    "$root_gen_dir",
    "$root_gen_dir/xwalk",
    "$root_gen_dir/xwalk/experimental",
    "$root_gen_dir/xwalk/resources"
  ]
}

action_foreach("generate_jsapi_file_system") {
  script = "//tools/json_schema_compiler/compiler.py"
  sources = [
    "//xwalk/experimental/native_file_system/native_file_system.idl",
  ]

  inputs = [
    "//tools/json_schema_compiler/cc_generator.py",
    "//tools/json_schema_compiler/code.py",
    "//tools/json_schema_compiler/compiler.py",
    "//tools/json_schema_compiler/cpp_generator.py",
    "//tools/json_schema_compiler/cpp_type_generator.py",
    "//tools/json_schema_compiler/cpp_util.py",
    "//tools/json_schema_compiler/h_generator.py",
    "//tools/json_schema_compiler/idl_schema.py",
    "//tools/json_schema_compiler/model.py",
    "//tools/json_schema_compiler/util.cc",
    "//tools/json_schema_compiler/util.h",
    "//tools/json_schema_compiler/util_cc_helper.py",
  ]

  outputs = [
    "$root_gen_dir/xwalk/experimental/native_file_system/{{source_name_part}}.h",
    "$root_gen_dir/xwalk/experimental/native_file_system/{{source_name_part}}.cc",
  ]

  idl_path = rebase_path("//xwalk/experimental", "$root_out_dir")
  args = [
        "$idl_path/native_file_system/{{source_name_part}}.idl",
        "--root=$idl_path",
        "--destdir=./gen/xwalk/experimental",
        "--namespace=xwalk::jsapi::native_file_system",
        "--generator=cpp"
  ]
}

